fix overflow

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,7 @@
+html{
+    overflow:hidden;
+}
+
 h1.title {
     font-size: 20px !important;
     font-family: Arial !important;
